native/include/bluez_media_native.h

typedef struct BluezMediaBuffer {
  uint8_t* data;
  int32_t length;
} BluezMediaBuffer;
BLUEZ_MEDIA_EXPORT int bluez_media_player_set_shuffle(void* handle,
                                                      const char* player_path,
                                                      const char* shuffle);
BLUEZ_MEDIA_EXPORT int bluez_media_player_get_properties(
    void* handle,
    const char* player_path,
    BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_player_get_cover_art(void* handle,
                                                        const char* player_path,
                                                        const char* target_file,
                                                        int32_t timeout_ms);
BLUEZ_MEDIA_EXPORT int bluez_media_player_get_cover_art_from_existing_session(
    void* handle,
    const char* player_path,
    const char* target_file,
    int32_t timeout_ms);
// ── org.bluez.MediaControl1 remote controller controls ─────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_control_play(void* handle,
                                                const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_pause(void* handle,
                                                 const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_stop(void* handle,
                                                const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_next(void* handle,
                                                const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_previous(void* handle,
                                                    const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_volume_up(void* handle,
                                                     const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_volume_down(
    void* handle,
    const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_fast_forward(
    void* handle,
    const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_rewind(void* handle,
                                                  const char* control_path);
BLUEZ_MEDIA_EXPORT int bluez_media_control_get_properties(
    void* handle,
    const char* control_path,
    BluezMediaBuffer* out);
// ── org.bluez.MediaFolder1 browsing ────────────────────────────────────────

BLUEZ_MEDIA_EXPORT int bluez_media_folder_search(void* handle,
                                                 const char* folder_path,
                                                 const char* value,
                                                 BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_folder_list_items(void* handle,
                                                     const char* folder_path,
                                                     BluezMediaBuffer* out);
BLUEZ_MEDIA_EXPORT int bluez_media_folder_change_folder(
    void* handle,
    const char* folder_path,
    const char* target_folder_path);