lib/bluez_media_native_bindings_generated.dart


  late final _bluez_media_player_set_shufflePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('bluez_media_player_set_shuffle');
  late final _bluez_media_player_set_shuffle =
      _bluez_media_player_set_shufflePtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();

  int bluez_media_player_get_properties(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_player_get_properties(handle, player_path, out);
  }

  late final _bluez_media_player_get_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_player_get_properties');
  late final _bluez_media_player_get_properties =
      _bluez_media_player_get_propertiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  int bluez_media_player_get_cover_art(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
    ffi.Pointer<ffi.Char> target_file,
    int timeout_ms,
  ) {
    return _bluez_media_player_get_cover_art(
      handle,
      player_path,
      target_file,
      timeout_ms,
    );
  }

  late final _bluez_media_player_get_cover_artPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('bluez_media_player_get_cover_art');
  late final _bluez_media_player_get_cover_art =
      _bluez_media_player_get_cover_artPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  int bluez_media_player_get_cover_art_from_existing_session(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> player_path,
    ffi.Pointer<ffi.Char> target_file,
    int timeout_ms,
  ) {
    return _bluez_media_player_get_cover_art_from_existing_session(
      handle,
      player_path,
      target_file,
      timeout_ms,
    );
  }

  late final _bluez_media_player_get_cover_art_from_existing_sessionPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Int32,
          )
        >
      >('bluez_media_player_get_cover_art_from_existing_session');
  late final _bluez_media_player_get_cover_art_from_existing_session =
      _bluez_media_player_get_cover_art_from_existing_sessionPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              int,
            )
          >();

  /// ── org.bluez.MediaControl1 remote controller controls ─────────────────────
  int bluez_media_control_play(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_play(handle, control_path);
  }

  late final _bluez_media_control_playPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_play');
  late final _bluez_media_control_play = _bluez_media_control_playPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_pause(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_pause(handle, control_path);
  }

  late final _bluez_media_control_pausePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_pause');
  late final _bluez_media_control_pause = _bluez_media_control_pausePtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_stop(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_stop(handle, control_path);
  }

  late final _bluez_media_control_stopPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_stop');
  late final _bluez_media_control_stop = _bluez_media_control_stopPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_next(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_next(handle, control_path);
  }

  late final _bluez_media_control_nextPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_next');
  late final _bluez_media_control_next = _bluez_media_control_nextPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_previous(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_previous(handle, control_path);
  }

  late final _bluez_media_control_previousPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_previous');
  late final _bluez_media_control_previous = _bluez_media_control_previousPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_volume_up(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_volume_up(handle, control_path);
  }

  late final _bluez_media_control_volume_upPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_volume_up');
  late final _bluez_media_control_volume_up = _bluez_media_control_volume_upPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_volume_down(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_volume_down(handle, control_path);
  }

  late final _bluez_media_control_volume_downPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_volume_down');
  late final _bluez_media_control_volume_down =
      _bluez_media_control_volume_downPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
          >();

  int bluez_media_control_fast_forward(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_fast_forward(handle, control_path);
  }

  late final _bluez_media_control_fast_forwardPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_fast_forward');
  late final _bluez_media_control_fast_forward =
      _bluez_media_control_fast_forwardPtr
          .asFunction<
            int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
          >();

  int bluez_media_control_rewind(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
  ) {
    return _bluez_media_control_rewind(handle, control_path);
  }

  late final _bluez_media_control_rewindPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)
        >
      >('bluez_media_control_rewind');
  late final _bluez_media_control_rewind = _bluez_media_control_rewindPtr
      .asFunction<int Function(ffi.Pointer<ffi.Void>, ffi.Pointer<ffi.Char>)>();

  int bluez_media_control_get_properties(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> control_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_control_get_properties(handle, control_path, out);
  }

  late final _bluez_media_control_get_propertiesPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_control_get_properties');
  late final _bluez_media_control_get_properties =
      _bluez_media_control_get_propertiesPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<BluezMediaBuffer>,
            )
          >();

  /// ── org.bluez.MediaFolder1 browsing ────────────────────────────────────────
  int bluez_media_folder_search(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> folder_path,
    ffi.Pointer<ffi.Char> value,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_folder_search(handle, folder_path, value, out);
  }

  late final _bluez_media_folder_searchPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_folder_search');
  late final _bluez_media_folder_search = _bluez_media_folder_searchPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<BluezMediaBuffer>,
        )
      >();

  int bluez_media_folder_list_items(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> folder_path,
    ffi.Pointer<BluezMediaBuffer> out,
  ) {
    return _bluez_media_folder_list_items(handle, folder_path, out);
  }

  late final _bluez_media_folder_list_itemsPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<BluezMediaBuffer>,
          )
        >
      >('bluez_media_folder_list_items');
  late final _bluez_media_folder_list_items = _bluez_media_folder_list_itemsPtr
      .asFunction<
        int Function(
          ffi.Pointer<ffi.Void>,
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<BluezMediaBuffer>,
        )
      >();

  int bluez_media_folder_change_folder(
    ffi.Pointer<ffi.Void> handle,
    ffi.Pointer<ffi.Char> folder_path,
    ffi.Pointer<ffi.Char> target_folder_path,
  ) {
    return _bluez_media_folder_change_folder(
      handle,
      folder_path,
      target_folder_path,
    );
  }

  late final _bluez_media_folder_change_folderPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Int Function(
            ffi.Pointer<ffi.Void>,
            ffi.Pointer<ffi.Char>,
            ffi.Pointer<ffi.Char>,
          )
        >
      >('bluez_media_folder_change_folder');
  late final _bluez_media_folder_change_folder =
      _bluez_media_folder_change_folderPtr
          .asFunction<
            int Function(
              ffi.Pointer<ffi.Void>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
            )
          >();
